[1.5.6] - Add command lists to command actions