@@ -5,25 +5,26 @@ import org.bukkit.Bukkit;
 import org.bukkit.configuration.ConfigurationSection;
 import org.bukkit.entity.Player;
 
-import java.util.Arrays;
-import java.util.LinkedList;
 import java.util.List;
 
-// TODO: Command list support
 public class ConsoleCommandAction extends Action {
-    private final String command;
-    private final String arguments;
+    private final List<String> commands;
 
     public ConsoleCommandAction(ConfigurationSection actionSection) {
         super(List.of("command"), actionSection);
 
-        List<String> fullCommand = new LinkedList<>(Arrays.asList(actionSection.getString("command", "").split(" ")));
-        this.command = fullCommand.remove(0);
-        this.arguments = String.join(" ", fullCommand);
+        if (actionSection.isList("command")) {
+            this.commands = actionSection.getStringList("command");
+
+        } else {
+            this.commands = List.of(actionSection.getString("command", ""));
+        }
     }
 
     @Override
     public void runAction(Player clickedPlayer, Player actionPlayer) {
-        Bukkit.dispatchCommand(Bukkit.getConsoleSender(), command + " " + getTextString(arguments, clickedPlayer, actionPlayer));
+        for (String command : commands) {
+            Bukkit.dispatchCommand(Bukkit.getConsoleSender(), getTextString(command, clickedPlayer, actionPlayer));
+        }
     }
 }
